--- a/style.css
+++ b/style.css
@@ -4,20 +4,30 @@
     cursor: none;
     margin: 0;
     padding: 0;
+    transition: .3 ease-out;
 }
 
 a {
-    color: #000000;
+    color: #000;
 }
 
 body {
-    aspect-ratio: 9 / 16;
-    background-color: #ffffff;
+    aspect-ratio: 1 / 2;
+    background-color: #fff;
     font-family: Archivo, sans-serif;
     font-size: 2vh;
     height: 100vh;
     margin: 0 auto 0 auto;
     overflow: hidden;
+}
+
+footer {
+    bottom: 0;
+    display: flex;
+    left: 0;
+    margin: 0;
+    position: fixed;
+    width: 100%;
 }
 
 .container {
@@ -44,7 +54,7 @@ body {
 }  
 
 .navbar li {
-    background-color: #e6e6e6;
+    background-color: #ccc;
     border: .2vh solid;
     border-radius: 1vh;
     margin-right: .5vh;
@@ -53,7 +63,7 @@ body {
 }
 
 .navbar li:hover {
-    background-color: #b3b3b3;
+    background-color: #999;
     transition: 0.1s ease-out;
 }
 
@@ -79,8 +89,8 @@ body {
 }
 
 #cursorbox {
-    background: #ffffff;
-    border-radius: 50%;
+    background: #fff;
+    border-radius: 30%;
     height: 20vh;
     margin: 0;
     mix-blend-mode: difference;
@@ -94,10 +104,10 @@ body {
 
 #icon {
     aspect-ratio: 1;
-    background-color: #000000;
+    background-color: #000;
     border-radius: 0.6vh;
     height: 2vh;
-    margin: 0 .6vh 0 .1vh;
+    margin: 0 .6vh 0 .4vh;
 }
 
 #subtitle {
@@ -113,3 +123,49 @@ body {
     margin-right: 1vh;
 }
 
+/* Music Player */
+
+/*
+
+.player {
+  background-color: #eee;
+  border-radius: 2vh;
+  display: inline-block;
+  font-size: 1.6vh;
+  margin: 2vh auto 2vh auto;
+  overflow: hidden;
+  padding: 2vh;
+  width: 42vh;
+}
+
+.songinfo {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  margin: 0 0 1vh 0;
+}
+
+.controls {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.controls > *{
+  aspect-ratio: 1;
+  background-color: #ddd;
+  border: none;
+  border-radius: 1.6vh;
+  margin: 0 1vh 0 1vh;
+  width: 4vh
+}
+
+.controls > *:hover{
+  background-color: #ccc;
+}
+
+#songname {
+    margin-right: 1vh;
+}
+
+*/
